src/objects/HOG_EOJ__c.object
<CustomObject>
    <description>End Of Job Report for DEFT</description>
    <fields>
        <fullName>Bail_Well__c</fullName>
        <label>Bail Well</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Casing_Damage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Casing Damage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coil_Kit1__c</fullName>
        <label>Coil Kit</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coil_Kit2__c</fullName>
        <label>Coil Kit</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments1__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments2__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Variance__c</fullName>
        <formula>Budget__c -  Final_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Damage_Codes__c</fullName>
        <formula>TRIM(RIGHT(TEXT(Service_General__c),5))
+ &quot;-&quot; + 
TRIM(RIGHT(TEXT(Service_Detail__c),5))</formula>
        <label>Damage Codes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debris_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debris Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drain_Placement1__c</fullName>
        <label>Drain Placement</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drain_Placement2__c</fullName>
        <label>Drain Placement</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drain_Type1__c</fullName>
        <label>Drain Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drain_Type2__c</fullName>
        <label>Drain Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOJ_Details__c</fullName>
        <label>EOJ Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Operator1_Email__c</fullName>
        <label>Field Operator 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Field_Operator2_Email__c</fullName>
        <label>Field Operator 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Field_Operator3_Email__c</fullName>
        <label>Field Operator 3 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Field_Senior_Email__c</fullName>
        <label>Field Senior Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Final_Cost__c</fullName>
        <label>Final Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Tag_Depth__c</fullName>
        <label>Final Tag Depth</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fluid_Inj__c</fullName>
        <label>Fluid Inj (m3)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fluid_Recovered__c</fullName>
        <label>Fluid Recovered (m3)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H2S__c</fullName>
        <formula>Service_Rig_Program__r.H2S__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>H2S</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Tag_Depth__c</fullName>
        <label>Initial  Tag Depth</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intake_Depth1__c</fullName>
        <label>Intake Depth</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intake_Depth2__c</fullName>
        <label>Intake Depth</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Cost_Comments__c</fullName>
        <label>Job Cost Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Length_Off_Tag1__c</fullName>
        <label>Length Off Tag</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_Off_Tag2__c</fullName>
        <label>Length Off Tag</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NTT_Type1__c</fullName>
        <label>NTT Type</label>
        <picklist>
            <picklistValues>
                <fullName>NTT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Torque Rings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tubing Anchor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NTT_Type2__c</fullName>
        <label>NTT Type</label>
        <picklist>
            <picklistValues>
                <fullName>NTT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Torque Rings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tubing Anchor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Perforations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Perforations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Location__c</fullName>
        <label>Next Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Number__c</fullName>
        <formula>Service_Rig_Program__r.Notification_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Field_AMU__c</fullName>
        <formula>Service_Rig_Program__r.Operating_Field_AMU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operation Field (AMU)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Coordinator_Email__c</fullName>
        <label>Operations Coordinator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Operator_On_Call__c</fullName>
        <formula>Service_Rig_Program__r.Operator_Route__r.Operator_on_Call_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operator On Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBTD__c</fullName>
        <label>PBTD</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perf_Interval__c</fullName>
        <label>Perf Interval</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pin_Size1__c</fullName>
        <label>Pin Size</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pin_Size2__c</fullName>
        <label>Pin Size</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Polished_Rod_Length1__c</fullName>
        <label>Polished Rod Length</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Polished_Rod_Length2__c</fullName>
        <label>Polished Rod Length</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Failure_Detail__c</fullName>
        <label>Previous Failure - Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Service_Date__c</fullName>
        <label>Previous Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Production_Coordinator_Email__c</fullName>
        <label>Production Coordinator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Production_Engineer_Email__c</fullName>
        <label>Production Engineer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pull_Out_of_Sand__c</fullName>
        <label>Pull Out of Sand</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pump_Displacement_Size1__c</fullName>
        <label>Pump Displacement/Size</label>
        <picklist>
            <controllingField>Pump_Vendor1__c</controllingField>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>43</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pump_Displacement_Size2__c</fullName>
        <label>Pump Displacement/Size</label>
        <picklist>
            <controllingField>Pump_Vendor2__c</controllingField>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>43</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pump_Elastomer1__c</fullName>
        <label>Pump Elastomer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pump_Elastomer2__c</fullName>
        <label>Pump Elastomer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pump_Lift1__c</fullName>
        <label>Pump Lift</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pump_Lift2__c</fullName>
        <label>Pump Lift</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pump_Type1__c</fullName>
        <label>Pump Type (Pulled)</label>
        <picklist>
            <picklistValues>
                <fullName>PC Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reciprocating - Insertable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reciprocating - Tubing Liner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-PCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pump_Type2__c</fullName>
        <label>Pump Type (Installed)</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pump_Vendor1__c</fullName>
        <label>Pump Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baker Hughes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weatherford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kudu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil Lift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grenco (GE)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pump_Vendor2__c</fullName>
        <label>Pump Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baker Hughes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weatherford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kudu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil Lift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grenco (GE)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rod_Comments1__c</fullName>
        <label>Rod Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rod_Comments2__c</fullName>
        <label>Rod Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rod_Condition1__c</fullName>
        <label>Rod Condition</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rod_Condition2__c</fullName>
        <label>Rod Condition</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rod_Failure__c</fullName>
        <label>Rod Failure</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rod_Size1__c</fullName>
        <label>Rod Size</label>
        <picklist>
            <picklistValues>
                <fullName>7/8&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 1/8&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 1/4&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rod_Size2__c</fullName>
        <label>Rod Size</label>
        <picklist>
            <picklistValues>
                <fullName>7/8&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 1/8&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 1/4&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rod_Type1__c</fullName>
        <label>Rod Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sucker Rods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuous Rods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rod_Type2__c</fullName>
        <label>Rod Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sucker Rods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuous Rods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rotor_Condition1__c</fullName>
        <label>Rotor Condition</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-chromed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rotor_Condition2__c</fullName>
        <label>Rotor Condition</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-chromed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rotor_Length1__c</fullName>
        <label>Rotor Length</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rotor_Length2__c</fullName>
        <label>Rotor Length</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rotor_Tag_Type1__c</fullName>
        <label>Rotor Tag Type</label>
        <picklist>
            <picklistValues>
                <fullName>Top Tag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tag Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rotor_Tag_Type2__c</fullName>
        <label>Rotor Tag Type</label>
        <picklist>
            <picklistValues>
                <fullName>Top Tag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tag Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <formula>Service_Rig_Program__r.Operator_Route__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_Joint1__c</fullName>
        <label>Scope Joint</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scope_Joint2__c</fullName>
        <label>Scope Joint</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Completed__c</fullName>
        <label>Service Completed</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Detail__c</fullName>
        <label>Service - Detail</label>
        <picklist>
            <controllingField>Service_General__c</controllingField>
            <picklistValues>
                <fullName>Add Perforations - CPA1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backed Off - CPB1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backed Off - CPB2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blown - CPB3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge Plug - CPB4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken - CPB5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken - CPB9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken at Weld - CPB6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken Rotor - CPB7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken Tag Bar - CPB8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burnt - CPBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burnt Threads - CPBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cement Squeeze - CPC1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Stimulation - CPC2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collapsed - CPC3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corroded - CPC4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged Reservoir - CPD1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De-bonded - CPD2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deformed - CPD3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive Problem - CPD4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elevation Change - CPE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equip after Steam - CPE2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Removal - CPE3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESP - CPE4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed - CPF1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed - CPF2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed Functional - CPF3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faulty - CPF4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow-line Problem - CPF5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foam - CPF6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>